# VoxelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  draft-release.yml
assets/shaders/: chunk.wgsl
assets/textures/: dice.aseprite  dirt.aseprite  grass.aseprite  stone.aseprite  template.aseprite
libs/: CMakeLists.txt  CPM.cmake
libs/glfw3webgpu/: glfw3webgpu.c
libs/stbimage/: CMakeLists.txt
libs/wgpu-native/: FetchWgpuNativePrecompiled.cmake  wgpu-native-git-tag.txt
src/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Exceptions.h  Window.cpp  Window.h  main.cpp
src/render/: BlockTextures.cpp  BlockTextures.h  Camera.cpp  Camera.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMesher.cpp  ChunkMesher.h  ChunkUniform.h  ChunkVertex.h  FrameUniform.h  MeshData.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/render/gpu/: Frame.h  GpuContext.cpp  GpuContext.h  Pipeline.cpp  Pipeline.h
src/ui/: BlockListWindow.cpp  BlockListWindow.h  DebugUi.cpp  DebugUi.h  DemoWindow.cpp  DemoWindow.h  ImguiDrawable.h  PerformanceWindow.cpp  PerformanceWindow.h  WorldCreateWindow.cpp  WorldCreateWindow.h
src/world/: Chunk.cpp  Chunk.h  Level.cpp  Level.h
src/world/blocks/: Block.h  BlockRegistry.cpp  BlockRegistry.h
src/world/generators/: CaveGenerator.cpp  CaveGenerator.h  FlatGenerator.cpp  FlatGenerator.h  Generator.h  HillGenerator.cpp  HillGenerator.h  NoiseGenerator.h
